# cogpy

./: .gitignore  .gitlab-ci.yml  .mcp.json  CHANGELOG.md  CLAUDE.md  MAKEFILE.md  Makefile  README.md  dev-env.yml  env.yml  llms.txt  mkdocs.yml  pyproject.toml
.cache/indexio/chroma_db/: indexio.status.json
.claude/: settings.json
.claude/commands/: cogpy-dev.md  pipeio-report.md
.codio/: catalog.yml  profiles.yml
.datalad/: config
.github/workflows/: docs.yml
.projio/: config.yml  projio.mk
.projio/biblio/jobs/: docling_bg_20260328T084720Z_210c72c6.json  docling_bg_20260328T084720Z_38493473.json  docling_bg_20260328T084721Z_ce0cc253.json  docling_bg_20260328T084722Z_195d3237.json  docling_bg_20260328T084722Z_4593f730.json  docling_bg_20260328T084723Z_6bacd821.json  docling_bg_20260328T084724Z_878ef411.json  docling_bg_20260328T084724Z_c1762a82.json  docling_bg_20260328T084725Z_6be9c20a.json  docling_bg_20260328T084726Z_0340632b.json  docling_bg_20260328T084727Z_9ad67bc7.json  docling_bg_20260328T084728Z_00ccb09f.json  docling_bg_20260328T084728Z_710b469a.json  docling_bg_20260328T084729Z_9408a3b4.json  docling_bg_20260328T084730Z_4ea3ed6b.json  docling_bg_20260328T084731Z_b2acb9db.json
.projio/biblio/logs/: imports.jsonl
.projio/codio/: catalog.yml  profiles.yml  repos.yml
.projio/indexio/: config.yaml
.projio/prompts/: ttl_artifact_notebook.md
.projio/skills/cogpy-dev/: SKILL.md
bib/config/: collections.json  library.yml
bib/logs/: imports.jsonl
bib/srcbib/: imported.bib
docs/: api.rst  conf.py  index.md  index.rst  make.bat  tutorial_cogpy-preproc.md
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/log/: agent-activity.md
docs/log/dev/: refactor-pypi-readiness.md
docs/log/idea/: idea-arash-20260312-120006-015059.md  idea-arash-20260312-132448-441433.md  idea-arash-20260328-095007-583178.md  idea-arash-20260328-095200-240511.md  idea-arash-20260329-224338-417099.md  index.md
docs/log/issue/: index.md  issue-arash-20260327-023347-788561.md  issue-arash-20260327-023400-777025.md  issue-arash-20260327-023422-391836.md  issue-arash-20260327-023436-353044.md  issue-arash-20260328-095524-975606.md  issue-arash-20260409-175045-652960.md  issue-arash-20260409-175057-234628.md  issue-arash-20260409-175110-549941.md  issue-arash-20260409-175123-314675.md
docs/log/task/: index.md  qc-wave-generalized-phase.md  qc-wave-optical-flow-vectorfield.md  qc-wave-phase-gradient.md  qc-wave-spectral-beamforming.md  qc-wave-surrogates.md  task-arash-20260327-023350-235588.md  task-arash-20260327-023421-005641.md  (+12 more)
docs/reference/: example-snakemake-pipeline  feature-registry
docs/source/: conf.py  index.md
examples/detect/: burst_detection_demo.py  multiple_detectors_demo.py  pipeline_demo.py
examples/events/: event_catalog_demo.py
examples/tensorscope/: README.md  event_explorer_demo.py  hello_tensorscope.py  hello_tensorscope_v21.py  interval_events_demo.py  phase1_interactive.py  phase2_interactive.py  phase3_app.py  phase4_events.py  phase5_multimodal.py  phase6_spatial_views.py  phase7_view_composer.py  phase8_view_builder.py  phase9_orthoslicer.py  psd_explorer_demo.py  test_phase1_state.py  test_phase2_layers.py  test_phase3_app.py  test_phase4_events.py  test_phase5_multimodal.py  test_phase6_complete.py  test_session_persistence.py  test_signal_centric.py  v3_minimal_app.py
notebooks/: mtm_core.py  multitaper.py  multitaper_core.py  sliding-version-0-minimal.py  sliding-version-1-axis.py  sliding-version-2-dask.py  sliding-version-3-xarray.py  sliding-version-all-test.py  sliding.md  sliding_core_.py  sliding_window_utils.py  slidingwindow.ipynb  slidingwindow.py  spectral_utils.py  test_mtm_core.py  test_multitaper_core.py
notebooks/bids/: bidsproducts.py  config.yml
notebooks/tensorscope/: tensorscope_app.py  test_minimal.py
prompt/: codex-datalad-guide.md  codex-formatting-guide.md  codex-logging-guide.md  codex-prompts-reference.md  codex-release-guide.md  codex-testing-guide.md  create-tutorial.prompt.md  datalad.prompt.md  formatting.prompt.md  logging.prompt.md  project-context.md  prompt-paths.yaml  release.prompt.md  testing.prompt.md
src/cogpy/: __init__.py  base.py  update_shims.sh
src/cogpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_brainstates_restrict_perievent.py  test_schemas_intervals_events.py
tests/brainstates/: test_EMG.py  test_brainstates.py
tests/datasets/: test_gui_bundles.py  test_schemas.py
tests/decomposition/: test_erpPCA.py  test_erpPCA_matlab.py  test_pca.py
tests/detect/: test_base.py  test_burst.py  test_detect_utils.py  test_pipeline.py  test_ripple.py  test_slowwave.py  test_threshold.py
tests/events/: test_catalog.py  test_match.py  test_overlap.py
tests/io/: test_converters_import.py  test_mne_converter.py  test_sidecars_channel_count.py  test_xarray_views.py
tests/measures/: test_comparison.py  test_coupling.py  test_pac.py  test_spatial.py  test_temporal.py
tests/model/: test_poisson_process.py
tests/plot/: test_apps.py  test_ieeg_viewer_labels.py  test_processing_chain.py
tests/preprocess/: test_badchannel_phase_a_contracts.py  test_channel_features.py  test_extract_channel_features_xr.py  test_filt.py  test_filtx.py  test_interpolate.py  test_linenoise.py
tests/regression/: test_design.py  test_ols.py
tests/spectral/: test_mtm_spec.py  test_psd_utils.py  test_spectral.py  test_spectral_features.py  test_specx.py
tests/triggered/: test_stats.py  test_template.py
tests/utils/: test_convert.py  test_neighborhood.py  test_reshape.py  test_sliding.py  test_utils.py  test_xarr.py
tests/wave/: test_beamforming.py  test_features.py  test_generalized_phase.py  test_kw_spectrum.py  test_multitaper_nd.py  test_optical_flow.py  test_phase_gradient.py  test_surrogates.py  test_synthetic.py  test_types.py  test_vector_field.py
workflows/preprocess/: preprocessing.smk
(+694 files in other folders)
