[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cogpy"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Arash Shahidi", email = "A.Shahidi@campus.lmu.de"}
]

# Keep runtime deps minimal; move heavy/optional items to extras below
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "scikit-learn",
  "lazy_loader",
  "xarray",
  "tqdm",
  "numba",
  "dill",
  "kneed",
  "jinja2",
  "pyts",
  "quantities",
]

# Optional “feature” installs
[project.optional-dependencies]
viz = [
  "matplotlib",
  "seaborn",
  "plotly",
  "holoviews",
  "panel",
  "hvplot",
  "param",
  "ipympl",
]
notebook = [
  "ipykernel",
  "ipywidgets",
]
io = [
  "h5py",
  "tables",
  "zarr",
  "openpyxl",
  "xmltodict",
]
interop-mne = [
  "mne",
]
perf = [
  "dask[distributed]",
  "pyfftw",
]
signal = [
  "ghostipy",
  "scikit-image",
  "emd",
]
# The "all" extra includes all the others
all = [
  "cogpy[viz]",
  "cogpy[notebook]",
  "cogpy[io]",
  "cogpy[perf]",
  "cogpy[signal]",
]

[project.scripts]
cogpy-preproc = "cogpy.cli.preprocess:main"
tensorscope = "cogpy.core.plot.tensorscope.cli:main"

[tool.setuptools.package-data]
cogpy = ["workflows/**"]  # ship all workflow files

[tool.setuptools]
# by default, find_packages() is assumed.
# If your source lives in src/, declare it explicitly:
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: slower, external deps",
  "benchmark: performance benchmarks (run explicitly with -m benchmark)",
]
addopts = "-ra"
