[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecogpy"
version = "0.3.0"
description = "Atomic, composable primitives for ECoG / iEEG signal processing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Arash Shahidi", email = "A.Shahidi@campus.lmu.de"}
]
keywords = ["ecog", "ieeg", "electrophysiology", "signal-processing", "neuroscience"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

# Keep runtime deps minimal; move heavy/optional items to extras below
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "scikit-learn",
  "lazy_loader",
  "xarray",
  "tqdm",
  "dill",
  "kneed",
  "statsmodels",
  "tabulate",
  "pyyaml",
]

[project.urls]
Repository = "https://github.com/arashshahidi1997/cogpy"
Documentation = "https://arashshahidi1997.github.io/cogpy/"

# Optional “feature” installs
[project.optional-dependencies]
viz = [
  "matplotlib",
  "plotly",
  "holoviews",
  "panel",
  "param",
  "bokeh",
  "datashader",
  "tsdownsample",
]
notebook = [
  "ipykernel",
  "ipywidgets",
  "ipython",
]
io = [
  "h5py",
  "zarr",
  "xmltodict",
]
interop-mne = [
  "mne",
]
interop-nap = [
  "pynapple",
]
perf = [
  "dask[distributed]",
  "pyfftw",
]
signal = [
  "ghostipy",
  "scikit-image",
  "emd",
  "specparam",
]
# The "all" extra includes all the others
all = [
  "ecogpy[viz]",
  "ecogpy[notebook]",
  "ecogpy[io]",
  "ecogpy[perf]",
  "ecogpy[signal]",
]

[project.scripts]
cogpy-preproc = "cogpy.cli.preprocess:main"

[tool.setuptools.package-data]
cogpy = ["workflows/**", "datasets/cached_data/*"]  # ship workflows + sample data

[tool.setuptools]
# by default, find_packages() is assumed.
# If your source lives in src/, declare it explicitly:
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: slower, external deps",
  "benchmark: performance benchmarks (run explicitly with -m benchmark)",
]
addopts = "-ra"
